@@ -1,138 +1,120 @@
 package org.soptcollab.web1.hyundaicard.api.service.s3;
 
-import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.model.CannedAccessControlList;
-import com.amazonaws.services.s3.model.ListObjectsV2Request;
-import com.amazonaws.services.s3.model.ListObjectsV2Result;
-import com.amazonaws.services.s3.model.PutObjectRequest;
-import com.amazonaws.services.s3.model.S3Object;
-import com.amazonaws.services.s3.model.S3ObjectSummary;
-import java.io.File;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
-import java.net.URLDecoder;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import software.amazon.awssdk.core.ResponseBytes;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.*;
+
+import java.io.File;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 public class S3Service {
 
-  private final AmazonS3 amazonS3;
+  private final S3Client s3Client;
   private final String bucket;
+  private final String region;
 
-  public S3Service(AmazonS3 amazonS3, @Value("${cloud.aws.s3.bucket}") String bucket) {
-    this.amazonS3 = amazonS3;
+  public S3Service(S3Client s3Client,
+      @Value("${cloud.aws.s3.bucket}") String bucket,
+      @Value("${cloud.aws.region.static}") String region) {
+    this.s3Client = s3Client;
     this.bucket = bucket;
-
+    this.region = region;
   }
 
   public String upload(MultipartFile multipartFile, String dirName) throws IOException {
-    // 파일 이름에서 공백을 제거한 새로운 파일 이름 생성
     String originalFileName = multipartFile.getOriginalFilename();
-
-    // UUID를 파일명에 추가
     String uuid = UUID.randomUUID().toString();
-    String uniqueFileName = uuid + "_" + originalFileName.replaceAll("\\\\s", "_");
+    String uniqueFileName = uuid + "_" + originalFileName.replaceAll("\\s+", "_");
 
     String fileName = dirName + "/" + uniqueFileName;
-    log.info("fileName: " + fileName);
     File uploadFile = convert(multipartFile);
 
-    String uploadImageUrl = putS3(uploadFile, fileName);
-    removeNewFile(uploadFile);
-    return uploadImageUrl;
+    PutObjectRequest putObjectRequest = PutObjectRequest.builder()
+        .bucket(bucket)
+        .key(fileName)
+        .acl(ObjectCannedACL.PUBLIC_READ)
+        .contentType(multipartFile.getContentType())
+        .build();
 
+    s3Client.putObject(putObjectRequest, RequestBody.fromFile(uploadFile));
+
+    removeNewFile(uploadFile);
+    return getObjectUrl(fileName);
   }
 
   private File convert(MultipartFile file) throws IOException {
     String originalFileName = file.getOriginalFilename();
     String uuid = UUID.randomUUID().toString();
-    String uniqueFileName = uuid + "_" + originalFileName.replaceAll("\\\\s", "_");
+    String uniqueFileName = uuid + "_" + originalFileName.replaceAll("\\s+", "_");
 
     File convertFile = new File(uniqueFileName);
-    if (convertFile.createNewFile()) {
-      try (FileOutputStream fos = new FileOutputStream(convertFile)) {
-        fos.write(file.getBytes());
-      } catch (IOException e) {
-        log.error("파일 변환 중 오류 발생: {}", e.getMessage());
-        throw e;
-      }
-      return convertFile;
+    try (FileOutputStream fos = new FileOutputStream(convertFile)) {
+      fos.write(file.getBytes());
     }
-    throw new IllegalArgumentException(String.format("파일 변환에 실패했습니다. %s", originalFileName));
-  }
-
-  private String putS3(File uploadFile, String fileName) {
-    amazonS3.putObject(new PutObjectRequest(bucket, fileName, uploadFile)
-        .withCannedAcl(CannedAccessControlList.PublicRead));
-    return amazonS3.getUrl(bucket, fileName).toString();
+    return convertFile;
   }
 
   private void removeNewFile(File targetFile) {
     if (targetFile.delete()) {
-      log.info("파일이 삭제되었습니다.");
+      log.info("임시 파일 삭제 성공");
     } else {
-      log.info("파일이 삭제되지 못했습니다.");
+      log.warn("임시 파일 삭제 실패");
     }
   }
 
   public void deleteFile(String fileName) {
-    try {
-      // URL 디코딩을 통해 원래의 파일 이름을 가져옵니다.
-      String decodedFileName = URLDecoder.decode(fileName, "UTF-8");
-      log.info("Deleting file from S3: " + decodedFileName);
-      amazonS3.deleteObject(bucket, decodedFileName);
-    } catch (UnsupportedEncodingException e) {
-      log.error("Error while decoding the file name: {}", e.getMessage());
-    }
+    String decodedFileName = URLDecoder.decode(fileName, StandardCharsets.UTF_8);
+    s3Client.deleteObject(DeleteObjectRequest.builder()
+        .bucket(bucket)
+        .key(decodedFileName)
+        .build());
   }
 
   public String updateFile(MultipartFile newFile, String oldFileName, String dirName)
       throws IOException {
-    // 기존 파일 삭제
-    log.info("S3 oldFileName: " + oldFileName);
     deleteFile(oldFileName);
-    // 새 파일 업로드
     return upload(newFile, dirName);
   }
 
-  /**
-   * 1) 단일 파일을 S3에서 가져오기
-   * @param fileName S3에 저장된 전체 경로
-   * @return S3Object (InputStream 등을 직접 사용 가능)
-   */
-  public S3Object getFile(String fileName) {
-    log.info("Fetching file from S3: {}", fileName);
-    return amazonS3.getObject(bucket, fileName);
+  public byte[] getFile(String fileName) {
+    GetObjectRequest getObjectRequest = GetObjectRequest.builder()
+        .bucket(bucket)
+        .key(fileName)
+        .build();
+
+    ResponseBytes<GetObjectResponse> response = s3Client.getObjectAsBytes(getObjectRequest);
+    return response.asByteArray(); // 필요 시 InputStream으로도 변환 가능
   }
 
-  /**
-   * 2) 특정 디렉터리의 모든 파일 URL 목록 조회
-   * @param dirName 폴더 경로
-   * @return 접근 가능한 URL 리스트
-   */
   public List<String> listFiles(String dirName) {
-    ListObjectsV2Request req = new ListObjectsV2Request()
-        .withBucketName(bucket)
-        .withPrefix(dirName + "/");
-    ListObjectsV2Result result = amazonS3.listObjectsV2(req);
+    ListObjectsV2Request listRequest = ListObjectsV2Request.builder()
+        .bucket(bucket)
+        .prefix(dirName + "/")
+        .build();
 
-    return result.getObjectSummaries()
-        .stream()
-        .map(S3ObjectSummary::getKey)
-        .map(key -> amazonS3.getUrl(bucket, key).toString())
+    ListObjectsV2Response result = s3Client.listObjectsV2(listRequest);
+
+    return result.contents().stream()
+        .map(S3Object::key)
+        .filter(key -> !key.equals(dirName + "/"))
+        .map(this::getObjectUrl)
         .collect(Collectors.toList());
   }
 
-
-
-
-
+  private String getObjectUrl(String key) {
+    return String.format("https://%s.s3.%s.amazonaws.com/%s", bucket, region, key);
+  }
 }
